# Proyecto2_GS

./: CMakeLists.txt  README.md
assets/: map.txt
src/: color.h  imageloader.h  main.cpp  map.txt  print.h  rc.h
